css/style.css
/* ... */
#autotype {
  height: 100vh;
  width:100vw;
  display: flex;
  align-items: center;
  justify-content: center;
  position:absolute;
  left:-1vw;
}
#pepperwrapper{
  /* background: #000; */
  display: flex;
  align-items: center;
  justify-content: center;
}

.headline {
  margin: 20px;
  color: white;
  text-align: center;
  margin-bottom: 10vh;
  opacity: 1;
}
.headline #autotext {
  letter-spacing: 1.6px;
  font-weight: 500;
  font-size: 100px;
  /* padding-bottom: 100px; */
  z-index: 10;
  opacity: 1;
}

#gsbutton{
  position: relative;
  margin-left: auto;
  margin-right: auto;
  display: flex;
  align-items: center;
  justify-content: center;
  bottom: 8vh;
}
/* Get started button */
.gettingStarted {
  display:block;
  height: auto;
  width: 150px;
  margin: 10px 7px;
  padding: 5px 5px;
  font-weight: 700;
  font-size: 15px;
  letter-spacing: 2px;
  color: #383736;
  border: 2px #383736 solid;
  border-radius: 4px;
  text-transform: uppercase;
  outline: 0;
  overflow:hidden;
  background: none;
  z-index: 1;
  cursor: pointer;
  transition:         0.08s ease-in;
  -o-transition:      0.08s ease-in;
  -ms-transition:     0.08s ease-in;
  -moz-transition:    0.08s ease-in;
  -webkit-transition: 0.08s ease-in;
  position: relative;
}

.gettingStarted:hover {
  color: whitesmoke;
}

.gettingStarted:before {
  content: "";
  position: absolute;
  background: #383736;
  bottom: 0;
  left: 0;
  right: 0;
  top: 100%;
  z-index: -1;
  transition: top 0.15s ease-in;
}

.gettingStarted:hover:before {
  top: 0;
}

.fade:before{
  content:"→";
  position:absolute;
  color:#383736;
  left: 88%;
  opacity: 0;
  transition: all 0.4s ease-in;
}

/* inkpot */
#loadink {
  top:0;
  left:0;
  height: 100vh;
  width: 100vw;
  position: fixed;
  background-color: #000;
  opacity:0.75;
 }
 

 
 .v1 {
   stroke-dasharray: 700 150;
   stroke-dashoffset: 2700;
   fill: url("#MyGradient");
   animation-name: draw, fill;
   animation-duration: 6s;
   animation-timing-function: ease-in-out;
   animation-direction:alternate;
   animation-iteration-count:infinite;
 }
 
 @keyframes draw {
   to {
     stroke-dashoffset: 0
   }
 }
 
 @keyframes fill {
   from { fill-opacity: 0; }
   to { fill-opacity: 1; }
 }


/* fallingLetters */
#fallingLetters {
  height: 35vh;
  background: rgba(0,0,0,0);
  overflow: hidden;
  display: flex;
  align-items: stretch;
  flex-direction: column;
  color: #eee;
  font-family: 'Open Sans', 'Roboto', 'Helvetica Neue', sans-serif;
  position: relative;
  top:0;
  left:0;
}

main {
  flex: 1;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}
main p {
  /* font-size: 1rem; */
  text-align: center;
  margin-top: 5vh;
  padding: 0 2rem;
  max-width: 30rem;
  line-height: 1.4;
}

main > div {
  position: absolute;
  top: 5vh;
  left: 0;
  text-transform: uppercase;
  -webkit-perspective: 300px;
          perspective: 300px;
  transition: opacity .7s ease-in;
  font-size: 3vh;
  font-weight: 1;
}
main > div.popped {
  opacity: 0;
}
main > div.popped > span {
  -webkit-animation-play-state: paused;
          animation-play-state: paused;
}
main > div.popped > span b {
  opacity: 0;
}
main > div.missed {
  opacity: 0;
}
main > div.missed > span {
  -webkit-animation-play-state: paused;
          animation-play-state: paused;
}
main > div > span {
  position: absolute;
  display: block;
  -webkit-animation: waver 2s infinite alternate ease-in-out;
          animation: waver 2s infinite alternate ease-in-out;
  -webkit-perspective: 300px;
          perspective: 300px;
}
main > div > span b {
  display: block;
  padding: 2.5vh;
  z-index: 0;
  transition: opacity .25s linear;
}

@-webkit-keyframes waver {
  100% {
    -webkit-transform: translate3d(6vw, 0, 0);
            transform: translate3d(6vw, 0, 0);
  }
}

@keyframes waver {
  100% {
    -webkit-transform: translate3d(6vw, 0, 0);
            transform: translate3d(6vw, 0, 0);
  }
}

/* Nav bar */

*,*:before,*:after {
	box-sizing: border-box;
}

:after {
	content: "";
}

/* section {
  position: relative;
  left: 100px;
} */

nav {
  float: left;
  display: block;
  position: fixed;
  top:30vh;
  left: 0;
  height:32vh;
  background: transparent;
  /* border: 1px solid black; */
}

nav ul {
	text-align: center;
}

nav ul li {
	position: relative;
  width: 3vw;;
  height:8vh;
  cursor: pointer;
  background: #fe9929;
  color: white;
	text-transform: uppercase;
  transition:all .4s ease-out;
  border: 1px solid white;
}

nav ul li:after {
	position: absolute;
	background: white;
	color: #fe9929;
	top:0;
	left: 3vw;;
  width: 3vw; 
  height: 100%;
  opacity:.5;
  transform: perspective(17vw) rotateY(90deg);
	transform-origin: 0 100%;
	transition:all .4s ease-out;
}

nav ul li:nth-child(1):after { 
	content: "हिन्दी";
	line-height: 8vh;
}
nav ul li:nth-child(2):after { 
	content: "தமிழ்";
	line-height: 8vh;
}
nav ul li:nth-child(3):after { 
	content: "ગુજરાતી";
	line-height: 8vh;
}
nav ul li:nth-child(4):after { 
	content: "বাংলা";
	line-height: 8vh;
}

nav ul li:hover {
	transform: translateX(-3vw);
}

nav ul li:hover:after {
  opacity: 1;
	transform: perspective(17vw) rotateY(0deg) scale(1) ;
}


nav ul li > div {
	display: inline-block;
  margin-top: 2vh;
  margin-bottom: 2vh;
  background: transparent;
}

nav ul li div { position: relative; }

nav ul li div span{
  font-size: 3vh;
}



/* Carousel */

#owlwrapper{
  background: #000;
  width: 100vw;
  margin-top:63vh;
  overflow: hidden;
}

.carousel-wrap {
  margin: 90px auto;
  padding: 0 5%;
  width: 80%;
  /* margin-top: 110vh; */
  position: relative;
  top:0;
  left:0;    
}

.carousel-wrap h3{
}

.owl-carousel{
  position: relative;
  /* top: 0; */
  left: -8vw;;
  display: block;
}

/* fix blank or flashing items on carousel */
.owl-carousel .item {
  position: relative;
  z-index: 4; 
  -webkit-backface-visibility: hidden; 
  backface-visibility: hidden;
}
/* ... */

